# playground-py

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
ai-profile/: README.md  app.py
ai-profile/lib/: pushover.py
ai-profile/me/: summary.txt
deep_research/: README.md  app.py  requirements.txt
deep_research/managers/: research_manager.py
deep_research/models/: planner.py  report.py  serper.py
deep_research/research_agents/: planner_agent.py  search_agent.py  writer_agent.py
deep_research/tools/: serper.py
langsmith/: app.py
