[project]
name = "playground-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.3.9",
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "requests>=2.32.5",
]
